--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </li>
 
                     <li class="navbar-item">
-                        <a href="googlemap.html" class="navbar-link hover-underline">
+                        <a href="#menu" class="navbar-link hover-underline">
                             <div class="separator"></div>
                             <span class="span">Vendors</span>
                         </a>
